Fix z-index issue

--- a/src/main/resources/static/css/bootstrap.css
+++ b/src/main/resources/static/css/bootstrap.css
@@ -16,21 +16,18 @@
 .darken-on-hover:hover {
     background-color: rgba(0, 0, 0, 0.25);
 }
-#homePage {
-    height: 100%;
-    margin: 0;
-    overflow: hidden;
-}
+
 #homeImage {
     position: relative;
+    /*Ignore red underline in editor*/
     background-image: url("../../images/landingPlant.JPG");
     background-size: cover;
     background-position: center;
     color: white;
     height: 100vh;
     overflow: hidden;
-    z-index: -2;
 }
+/*uses before so we can layer a black bg over the homeImage and it matches the size 1:1 of the homeImage*/
 #homeImage::before {
     content: "";
     position: absolute;
@@ -38,6 +35,6 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Adjust the opacity as needed */
-    z-index: -1;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
 }
